; ModuleID = '/home/carl/AnghaBench/kphp-kdb/friend/extr_friend-engine.c_get_saved_userlist.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/friend/extr_friend-engine.c_get_saved_userlist.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.connection = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i64 }
%struct.keep_mc_header = type { i32, i32 }

@userlist = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @get_saved_userlist(%struct.connection* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.connection*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.keep_mc_header*, align 8
  %7 = alloca i32, align 4
  store %struct.connection* %0, %struct.connection** %4, align 8
  store i32 %1, i32* %5, align 4
  %8 = load %struct.connection*, %struct.connection** %4, align 8
  %9 = getelementptr inbounds %struct.connection, %struct.connection* %8, i32 0, i32 0
  %10 = load %struct.TYPE_3__*, %struct.TYPE_3__** %9, align 8
  %11 = icmp ne %struct.TYPE_3__* %10, null
  br i1 %11, label %13, label %12

12:                                               ; preds = %2
  store i32 -1, i32* %3, align 4
  br label %47

13:                                               ; preds = %2
  %14 = load %struct.connection*, %struct.connection** %4, align 8
  %15 = getelementptr inbounds %struct.connection, %struct.connection* %14, i32 0, i32 0
  %16 = load %struct.TYPE_3__*, %struct.TYPE_3__** %15, align 8
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = inttoptr i64 %18 to %struct.keep_mc_header*
  store %struct.keep_mc_header* %19, %struct.keep_mc_header** %6, align 8
  %20 = load %struct.connection*, %struct.connection** %4, align 8
  %21 = getelementptr inbounds %struct.connection, %struct.connection* %20, i32 0, i32 0
  %22 = load %struct.TYPE_3__*, %struct.TYPE_3__** %21, align 8
  %23 = call i32 @advance_read_ptr(%struct.TYPE_3__* %22, i32 8)
  %24 = load %struct.keep_mc_header*, %struct.keep_mc_header** %6, align 8
  %25 = getelementptr inbounds %struct.keep_mc_header, %struct.keep_mc_header* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  store i32 %26, i32* %7, align 4
  %27 = load %struct.connection*, %struct.connection** %4, align 8
  %28 = getelementptr inbounds %struct.connection, %struct.connection* %27, i32 0, i32 0
  %29 = load %struct.TYPE_3__*, %struct.TYPE_3__** %28, align 8
  %30 = load i32, i32* @userlist, align 4
  %31 = load i32, i32* %7, align 4
  %32 = mul nsw i32 %31, 4
  %33 = call i32 @read_in(%struct.TYPE_3__* %29, i32 %30, i32 %32)
  %34 = load i32, i32* %7, align 4
  %35 = mul nsw i32 4, %34
  %36 = icmp eq i32 %33, %35
  %37 = zext i1 %36 to i32
  %38 = call i32 @assert(i32 %37)
  %39 = load %struct.keep_mc_header*, %struct.keep_mc_header** %6, align 8
  %40 = getelementptr inbounds %struct.keep_mc_header, %struct.keep_mc_header* %39, i32 0, i32 1
  %41 = load i32, i32* %40, align 4
  %42 = load i32, i32* %5, align 4
  %43 = icmp ne i32 %41, %42
  br i1 %43, label %44, label %45

44:                                               ; preds = %13
  store i32 -1, i32* %3, align 4
  br label %47

45:                                               ; preds = %13
  %46 = load i32, i32* %7, align 4
  store i32 %46, i32* %3, align 4
  br label %47

47:                                               ; preds = %45, %44, %12
  %48 = load i32, i32* %3, align 4
  ret i32 %48
}

declare dso_local i32 @advance_read_ptr(%struct.TYPE_3__*, i32) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @read_in(%struct.TYPE_3__*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
